Fixed change log format.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,9 @@
+Changelog
+=========
 
-# Changelog
 
-1.0
----
+1.0 (unreleased)
+----------------
 
-- Initial release
+- Initial release.
+  [href]
