--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,5 +5,8 @@ Changelog
 1.0 (unreleased)
 ----------------
 
+- Removed unnecessary grokking of package.
+  [lgraf]
+
 - Initial release.
   [href]
