--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 1.0 (unreleased)
 ----------------
 
+- Removed unnecessary GS profile dependency on plone.app.dexterity:default.
+  [lgraf]
+
 - Removed unnecessary grokking of package.
   [lgraf]
 
