--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.0.2 (unreleased)
+-----
+
+- Rename "LuftbildPlus+" to "Luftbild+" and change the url accordingly. No
+  upgrade step necessary.
+  [href]
+
 1.0.1
 -----
 
