--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0.5 (unreleased)
+------------------
+
+- Load maps from "maps.zg.ch" instead of "maps.zug.ch".
+  [mbaechtold]
+
 1.0.4
 -----
 
