--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
-Nothing yet.
+- Update classifiers (incl. Plone 5 support) [Nachtalb]
+- Remove empty css-/jsregistry.xml from genericsetup [Nachtalb]
 
 1.0.5 (2017-02-17)
 ------------------
